objects/Lead_Conversion__c.object
<CustomObject>
    <description>Object used to store converted lead history from the SYS production evnrionment prior to Connect 5 go-live on June 14, 2010. This is read only data.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Lead Conversions</relationshipLabel>
        <relationshipName>Lead_Conversions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Lead Conversions</relationshipLabel>
        <relationshipName>Lead_Conversions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Converted_Date__c</fullName>
        <description>Date when Lead was converted</description>
        <label>Converted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Lead Conversions</relationshipLabel>
        <relationshipName>Lead_Conversions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Lead Conversions</relationshipLabel>
        <relationshipName>Lead_Conversions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Lead Conversion</label>
    <nameField>
        <label>Lead Conversion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead Conversions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Facility_Address_Required_for_Commercial</fullName>
        <active>false</active>
        <description>Facility Address Required for Commercial Lead Conversions.</description>
        <errorConditionFormula>( Lead__r.RecordTypeId = &apos;0128000000037AG&apos;)
&amp;&amp;
((isblank( Lead__r.Facility_Address__c )) &amp;&amp; (ISBLANK( Lead__r.Facility_City__c )) &amp;&amp; (ISBLANK( Lead__r.Facility_State__c )) &amp;&amp; (ISBLANK( Lead__r.Facility_Zip__c )))</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Facility Address is required for Commercial Lead Conversion. Enter Facility Address in the Lead.</errorMessage>
    </validationRules>
</CustomObject>